import java.util.List;

public class Alumno {

  private Calendar fecha_ingreso;

  private Calendar fecha_egreso;

    public Persona persona;
    /**
    * 
    *
   */
    public Carrera carrera;
    /**
    * 
    *
   */
  public List<Catedra> examen;

  public void mostrar() {
  }

}