import java.util.List;

public class Catedra {

  public String nombre;

    /**
    * 
    *
   */
  public List<Comision> comision;
    /**
    * 
    *
   */
  public List<Alumno> examen;
  
  public void listarAlumnos() {
  }

}