public class Docente {

    public Persona persona;
  
}