import java.util.List;

public class Persona {

  private String nombre;

      /**
    * 
    *
   */
  public List<Alumno> alumno;

  public void mostrar() {
  }

}